tests/ui/derive-above-bitsize.stderr
error: add #[bitsize] attribute above your derive attribute
 --> tests/ui/derive-above-bitsize.rs:3:10
  |
3 | #[derive(FromBits)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromBits` (in Nightly builds, run with -Z macro-backtrace for more info)
