tests/ui/derive-above-bitsize.rs
use bilge::prelude::*;

#[derive(FromBits)]
#[bitsize(4)]
struct A(u4);

fn main() {}
